re PR debug/43237 (Wrong DW_AT_upper_bound)

PR debug/43237
	* dwarf2out.c (add_bound_info): If a decl bound doesn't have decl_die,
	fallthrough to default handling, just with want_address 0 instead of 2.
	For single element lists, add_AT_loc directly, otherwise create an
	artificial variable DIE and stick location list to it.

	* gcc.dg/debug/dwarf2/pr43237.c: New test.

From-SVN: r157190